fixing math spacing

--- a/jupyter_book/book_template/_sass/page/components/_components.page.scss
+++ b/jupyter_book/book_template/_sass/page/components/_components.page.scss
@@ -286,3 +286,9 @@ div.jb_cell.tag_epigraph blockquote {
     font-style: normal;
   }
 }
+
+// MathJax blocks
+
+.MathJax_Display {
+  padding: 20px 0px;
+}
